--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/luajit"]
 	path = libs/luajit
 	url = https://luajit.org/git/luajit.git
+[submodule "nativefs"]
+	path = nativefs
+	url = git@github.com:EngineerSmith/nativefs.git
